<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Para">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:orientation="vertical"
            android:background="@drawable/form"
            tools:ignore="MissingConstraints">

   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
<LinearLayout
    android:layout_marginStart="16dp"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/titlepage"
        android:layout_marginTop="20dp"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:text="@string/saptamana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <TextView
        android:id="@+id/subtitlepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#212121"
        android:layout_marginTop="8dp"
        android:text="@string/de_terminat"
        android:fontFamily="@font/poppinsmedium"
        />


</LinearLayout>

       <Button
           android:id="@+id/btnAddNew"
           android:layout_width="55dp"
           android:layout_height="55dp"
           android:layout_marginLeft="150dp"
           android:layout_marginTop="35dp"
           android:background="@drawable/bgbtnew"
           android:text="@string/add"
           android:textAlignment="center"
           android:textColor="#FFF"
           android:textSize="40sp" />


   </LinearLayout>

     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
         android:background="#131E69"
         />

         </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ourdoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#be9c91"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="285dp"
        tools:ignore="MissingConstraints">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/endpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nu_mai_aveti_nimice_de_facut"
        android:textAlignment="center"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="571dp" />

</androidx.constraintlayout.widget.ConstraintLayout>